--- a/WebApplication5 Razor/WebApplication5 Razor.csproj
+++ b/WebApplication5 Razor/WebApplication5 Razor.csproj
@@ -264,6 +264,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\_BasicLayout.cshtml" />
     <Content Include="Views\_ViewStart.cshtml" />
+    <Content Include="Views\Home\NameAndPrice.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
