--- a/WebApplication5 Razor/WebApplication5 Razor.csproj
+++ b/WebApplication5 Razor/WebApplication5 Razor.csproj
@@ -266,6 +266,7 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Home\NameAndPrice.cshtml" />
     <Content Include="Views\Home\DemoExpression.cshtml" />
+    <Content Include="Views\Home\DemoArray.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
